--- a/App_Web/src/main/resources/templates/plugins/menu.html
+++ b/App_Web/src/main/resources/templates/plugins/menu.html
@@ -8,7 +8,7 @@
         <p sec:authorize="hasAnyRole('USER', 'MANAGER')"><a class="text" href="/requests">Requests</a></p>
     </nav>
     <nav class="menu-right">
-        <p sec:authorize="isAnonymous()"><a class="text" href="/login">Sign In</a></p>
+        <p sec:authorize="isAnonymous()"><a class="text" href="/auth/login">Sign In</a></p>
         <p sec:authorize="isAnonymous()"><a class="text" href="/auth/registration">Sign Up</a></p>
         <p sec:authorize="isAuthenticated()"><a class="text" href="/logout">Log Out</a></p>
     </nav>
