--- a/App_Web/src/main/resources/templates/create_user.html
+++ b/App_Web/src/main/resources/templates/create_user.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en" xmlns="http://www.w3.org/1999/xhtml"
+<html lang="en"
       xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
@@ -8,50 +8,51 @@
 </head>
 <body>
 
-<nav th:replace="~{plugins/menu :: menu}" ></nav>
+<nav th:replace="~{plugins/menu :: menu}"></nav>
 
-<div class="left-side-area">
-    <h1 class="header">Create user</h1>
-    <h1 class="subheader">Complete your user profile</h1>
+<div class="main">
+    <div class="left-side-area">
+        <h1 class="header">Create User</h1>
+        <h1 class="subheader">Complete your<br> user profile</h1>
 
+    </div>
+
+    <div>
+        <form action="/users/create" method="post">
+            <table>
+                <tr>
+                    <td class="text-left-column">Email</td>
+                    <td><input type="text" placeholder="Enter email" name="email"></td>
+                </tr>
+                <tr>
+                    <td class="text-left-column">Password</td>
+                    <td><input type="text" placeholder="Enter password" name="password"></td>
+                </tr>
+                <tr>
+                    <td class="text-left-column">First name</td>
+                    <td><input type="text" placeholder="Enter first name" name="firstName"></td>
+                </tr>
+                <tr>
+                    <td class="text-left-column">Last name</td>
+                    <td><input type="text" placeholder="Enter last name" name="lastName"></td>
+                </tr>
+                <tr>
+                    <td class="text-left-column">Patronymic name</td>
+                    <td><input type="text" placeholder="Enter patronymic name" name="patronymicName"></td>
+                </tr>
+                <tr>
+                    <td class="text-left-column">Contact preferences</td>
+                    <td><input type="text" placeholder="Enter contact preferences" name="contactPreferences"></td>
+                </tr>
+                <tr>
+                    <td class="text-left-column">Social media</td>
+                    <td><input type="text" placeholder="Enter social media" name="socialMedia"></td>
+                </tr>
+
+            </table>
+            <button type="submit" class="button-active">Create</button>
+        </form>
+    </div>
 </div>
-
-<div>
-    <form action="/users/create" method="post">
-        <table>
-            <tr>
-                <td class="text" align="right" wight="20%">Email</td>
-                <td><input type="text" placeholder="Enter email" name="email"></td>
-            </tr>
-            <tr>
-                <td class="text" align="right">Password</td>
-                <td><input type="text" placeholder="Enter password" name="password"></td>
-            </tr>
-            <tr>
-                <td class="text" align="right">First name</td>
-                <td><input type="text" placeholder="Enter first name" name="firstName"></td>
-            </tr>
-            <tr>
-                <td class="text" align="right">Last name</td>
-                <td><input type="text" placeholder="Enter last name" name="lastName"></td>
-            </tr>
-            <tr>
-                <td class="text" align="right">Patronymic name</td>
-                <td><input type="text" placeholder="Enter patronymic name" name="patronymicName"></td>
-            </tr>
-            <tr>
-                <td class="text" align="right">Contact preferences</td>
-                <td><input type="text" placeholder="Enter contact preferences" name="contactPreferences"></td>
-            </tr>
-            <tr>
-                <td class="text" align="right">Social media</td>
-                <td><input type="text" placeholder="Enter social media" name="socialMedia"></td>
-            </tr>
-
-        </table>
-        <button type="submit" class="button-active">Create</button>
-    </form>
-</div>
-
 </body>
 </html>
