--- a/App_Web/src/main/resources/templates/users.html
+++ b/App_Web/src/main/resources/templates/users.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en" xmlns="http://www.w3.org/1999/xhtml"
+<html lang="en"
       xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
@@ -11,76 +11,77 @@
 
 <nav th:replace="~{plugins/menu :: menu}"></nav>
 
-<div class="left-side-area">
-    <h1 class="header">Users</h1>
-    <h1 class="subheader">List of all users</h1>
-    <a href="/users/create" class="button-active">Create</a>
-</div>
+<div class="main">
+    <div class="left-side-area">
+        <h1 class="header">Users</h1>
+        <h1 class="subheader">List<br> of all users</h1>
+        <a href="/users/create" class="button-active">Create</a>
+    </div>
 
-<div>
-    <span>Size requests on page</span>
-    <select th:onchange="'window.location.href = \'' + @{/users?sort=id,asc} + '&size=\' + this.value'">
-        <option th:text="@{Now: __${users.getSize}__}"></option>
-        <option th:text="3"></option>
-        <option th:text="5"></option>
-        <option th:text="7"></option>
-        <option th:text="15"></option>
-    </select>
-</div>
-<div>
-    <table class="table">
-        <thead>
-        <tr class="table-header">
-            <th></th>
-            <th></th>
-            <th></th>
-            <th>Email</th>
-            <th>First name</th>
-            <th>Last name</th>
-            <th>Patronymic name</th>
-            <th>Contact preferences</th>
-            <th>Social media</th>
-            <th>Role</th>
-            <th>Is active</th>
-        </tr>
-        </thead>
-
-        <tbody>
-        <div th:each="el: ${users}">
-            <tr class="table-data">
-                <td>
-                    <a th:href="'/users/' + ${el.id}">
-                        <i class="fa-solid fa-eye" title="View"></i>
-                    </a>
-                </td>
-                <td>
-                    <a th:href="'/users/update/' + ${el.id}">
-                        <i class="fa-solid fa-file-pen" title="Edit"></i>
-                    </a>
-                </td>
-                <td>
-                    <a th:href="'/users/delete/' + ${el.id}">
-                        <i class="fa-solid fa-trash-can" title="Delete"></i>
-                    </a>
-                </td>
-                <td><p th:text="${el.email}"></p></td>
-                <td><p th:text="${el.firstName}"></p></td>
-                <td><p th:text="${el.lastName}"></p></td>
-                <td><p th:text="${el.patronymicName}"></p></td>
-                <td><p th:text="${el.contactPreferences}"></p></td>
-                <td><p th:text="${el.socialMedia}"></p></td>
-                <td><p th:text="${el.role}"></p></td>
-                <td><p th:text="${el.isActive}"></p></td>
-            </tr>
-
+    <div>
+        <div>
+            <span>Size requests on page</span>
+            <select th:onchange="'window.location.href = \'' + @{/users?sort=id,asc} + '&size=\' + this.value'">
+                <option th:text="@{Now: __${users.getSize}__}"></option>
+                <option th:text="3"></option>
+                <option th:text="5"></option>
+                <option th:text="7"></option>
+                <option th:text="15"></option>
+            </select>
         </div>
-        </tbody>
+        <table class="table">
+            <thead>
+            <tr class="table-header">
+                <th></th>
+                <th></th>
+                <th></th>
+                <th>Email</th>
+                <th>First name</th>
+                <th>Last name</th>
+                <th>Patronymic name</th>
+                <th>Contact preferences</th>
+                <th>Social media</th>
+                <th>Role</th>
+                <th>Is active</th>
+            </tr>
+            </thead>
 
-    </table>
-    <div th:insert="~{plugins/pagination :: pagination_fr}"
-         th:with="firstVer=${users}"></div>
+            <tbody>
+            <div th:each="el: ${users}">
+                <tr class="table-data">
+                    <td>
+                        <a th:href="'/users/' + ${el.id}">
+                            <i class="fa-solid fa-eye" title="View"></i>
+                        </a>
+                    </td>
+                    <td>
+                        <a th:href="'/users/update/' + ${el.id}">
+                            <i class="fa-solid fa-file-pen" title="Edit"></i>
+                        </a>
+                    </td>
+                    <td>
+                        <a th:href="'/users/delete/' + ${el.id}">
+                            <i class="fa-solid fa-trash-can" title="Delete"></i>
+                        </a>
+                    </td>
+                    <td><p th:text="${el.email}"></p></td>
+                    <td><p th:text="${el.firstName}"></p></td>
+                    <td><p th:text="${el.lastName}"></p></td>
+                    <td><p th:text="${el.patronymicName}"></p></td>
+                    <td><p th:text="${el.contactPreferences}"></p></td>
+                    <td><p th:text="${el.socialMedia}"></p></td>
+                    <td><p th:text="${el.role}"></p></td>
+                    <td><p th:text="${el.isActive}"></p></td>
+                </tr>
 
+            </div>
+            </tbody>
+
+        </table>
+        <div th:insert="~{plugins/pagination :: pagination_fr}"
+             th:with="firstVer=${users}"></div>
+
+    </div>
 </div>
-
 </body>
 </html>
