LMS-43: Add registration via email

--- a/App_Web/src/main/resources/templates/login.html
+++ b/App_Web/src/main/resources/templates/login.html
@@ -2,21 +2,26 @@
 <html xmlns="http://www.w3.org/1999/xhtml" xmlns:th="https://www.thymeleaf.org">
 <head>
     <title>Please Log In</title>
+    <meta charset="UTF-8">
+    <link rel="stylesheet" type="text/css" href="/static/css/main.css" th:href="@{/css/main.css}">
 </head>
 <body>
+<nav th:replace="~{plugins/menu :: menu}"></nav>
+
 <h1>Please Log In</h1>
-<div th:if="${param.error}">
-    Invalid email or password.</div>
-<div th:if="${param.logout}">
-    You have been logged out.</div>
+
 <form th:action="@{/login}" method="post">
     <div>
-        <input type="text" name="username" placeholder="Email"/>
+        <input type="email" name="username" placeholder="Email" required/>
     </div>
     <div>
-        <input type="password" name="password" placeholder="Password"/>
+        <input type="password" name="password" placeholder="Password" required/>
     </div>
     <input type="submit" value="Log in" />
+
+    <div th:if="${param.error}" style="color: red">
+        Bad credentials
+    </div>
 </form>
 </body>
 </html>
