--- a/App_Web/src/main/resources/templates/registration.html
+++ b/App_Web/src/main/resources/templates/registration.html
@@ -19,11 +19,15 @@
         <table>
             <tr>
                 <td class="text" align="right" wight="20%">Email</td>
-                <td><input type="text" placeholder="Enter email" name="email"></td>
+                <td><input type="email" placeholder="Enter email" name="email" required></td>
             </tr>
             <tr>
                 <td class="text" align="right">Password</td>
-                <td><input type="text" placeholder="Enter password" name="password"></td>
+                <td><input type="password" placeholder="Enter password" name="password" required></td>
+            </tr>
+            <tr>
+                <td class="text" align="right">Confirm password</td>
+                <td><input type="password" placeholder="Confirm password" name="confirmPassword" required></td>
             </tr>
             <tr>
                 <td class="text" align="right">First name</td>
