LMS-44: Pagination on centr, add icon eye

--- a/App_Web/src/main/resources/templates/lesson/lessons.html
+++ b/App_Web/src/main/resources/templates/lesson/lessons.html
@@ -3,66 +3,79 @@
       xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
+    <title>Lessons</title>
     <link href="/css/main.css" rel="stylesheet">
     <link href="/css/fontawesome/icons.css" rel="stylesheet">
 </head>
 <body>
+
 <nav th:replace="~{plugins/menu :: menu}" class="menu"></nav>
-<div class="left-side-area">
-    <h1 class="header">Show</h1>
-    <h2>Lessons</h2>
-</div>
-<div class="main-area">
-    <div>
-        <span>Size requests on page</span>
-        <select th:onchange="'window.location.href = \'' + @{/lessons?sort=id,asc} + '&size=\' + this.value'">
-            <option th:text="@{Now: __${lessons.getSize}__}"></option>
-            <option th:text="3"></option>
-            <option th:text="5"></option>
-            <option th:text="7"></option>
-            <option th:text="15"></option>
-        </select>
+
+<div class="main">
+    <div class="left-side-area">
+        <h1 class="header">Show</h1>
+        <h2>Lessons</h2>
     </div>
-    <table class="table">
-        <h2>List of Lessons</h2>
-        <tr class="table-header">
-            <th>Title</th>
-            <th>Start time</th>
-            <th>Description</th>
-            <th>Content</th>
-            <th>Home task</th>
-            <th>Home works</th>
-        </tr>
-        <th:block th:each="lesson : ${lessons}" th:object="${lesson}" class="table-data">
-            <tr>
-                <td th:text="${lesson.title}"></td>
-                <td th:text="${lesson.startTime}"></td>
-                <td th:text="${lesson.description}"></td>
-                <td th:text="${lesson.content}"></td>
-                <td th:text="${lesson.homeTask}"></td>
-                <td>
-                    <div align="center">
-                        <table border="1">
-                            <thead>
-                            <tr>
-                                <th>ID</th>
-                                <th>Student</th>
-                            </tr>
-                            </thead>
-                            <th:block th:each="homework : ${lesson.getHomeworks()}">
-                                <tr>
-                                    <td th:text="${homework.id}"></td>
-                                    <td th:text="${homework.student.firstName} + ' ' + ${homework.student.lastName}"></td>
-                                </tr>
-                            </th:block>
-                        </table>
-                    </div>
-                </td>
+
+    <div class="main-area">
+        <div>
+            <span>Size requests on page</span>
+            <select th:onchange="'window.location.href = \'' + @{/lessons?sort=id,asc} + '&size=\' + this.value'">
+                <option th:text="@{Now: __${lessons.getSize}__}"></option>
+                <option th:text="3"></option>
+                <option th:text="5"></option>
+                <option th:text="7"></option>
+                <option th:text="15"></option>
+            </select>
+        </div>
+        <table class="table">
+            <h2>List of Lessons</h2>
+            <tr class="table-header">
+                <th></th>
+                <th>Title</th>
+                <th>Start time</th>
+                <th>Description</th>
+                <th>Content</th>
+                <th>Home task</th>
+                <th>Home works</th>
             </tr>
-        </th:block>
-    </table>
-    <div th:insert="~{plugins/pagination :: pagination_fr}"
-         th:with="firstVer=${lessons}">
+            <tbody>
+            <th:block th:each="lesson : ${lessons}" th:object="${lesson}" class="table-data">
+                <tr class="table-data">
+                    <td>
+                        <a>
+                            <i class="fa-solid fa-eye" title="View"></i>
+                        </a>
+                    </td>
+                    <td th:text="${lesson.title}"></td>
+                    <td th:text="${lesson.startTime}"></td>
+                    <td th:text="${lesson.description}"></td>
+                    <td th:text="${lesson.content}"></td>
+                    <td th:text="${lesson.homeTask}"></td>
+                    <td>
+                        <div align="left">
+                            <table border="1">
+                                <thead>
+                                <tr>
+                                    <th>ID</th>
+                                    <th>Student</th>
+                                </tr>
+                                </thead>
+                                <th:block th:each="homework : ${lesson.getHomeworks()}">
+                                    <tr>
+                                        <td th:text="${homework.id}"></td>
+                                        <td th:text="${homework.student.firstName} + ' ' + ${homework.student.lastName}"></td>
+                                    </tr>
+                                </th:block>
+                            </table>
+                        </div>
+                    </td>
+                </tr>
+            </th:block>
+            </tbody>
+        </table>
+        <div th:insert="~{plugins/pagination :: pagination_fr}"
+             th:with="firstVer=${lessons}"></div>
     </div>
 </div>
 </body>
