--- a/App_Web/src/main/resources/templates/info.html
+++ b/App_Web/src/main/resources/templates/info.html
@@ -9,7 +9,7 @@
 <body>
 <nav th:replace="~{plugins/menu :: menu}"></nav>
 
-<h4>An email has been sent to your email to activate your account.</h4>
+<h4>A confirmation email has been sent to your email</h4>
 
 </body>
 </html>
